data/derived/fa15/progs/unify/prog2115.ml.out
Characters 46-50:
  in wwhile ((fx),b);;
             ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a * bool
